# cloud_gallery

./: Cargo.toml  Trunk.toml  index.html
public/: style.css
src/: main.rs
src/app/: mod.rs  router.rs
src/app/home/: mod.rs
src/app/welcome/: mod.rs
