[package]
name = "cloud_gallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.4", features = ["csr", "nightly"] }
stylers = { git = "https://github.com/abishekatp/stylers" }
thaw = "0.1.3"

[build-dependencies]
stylers = { git = "https://github.com/abishekatp/stylers" }
